syntax = "proto3";

package mixer;

option go_package = "github.com/nicjohnson145/mixer/mixerservice/protos";

import "google/api/annotations.proto";


message PurgeRequest {
  
}

message PurgeResponse {

}

service PurgeService {
  rpc Purge(PurgeRequest) returns (PurgeResponse) {
    option (google.api.http) = {
      post: "/api/v1/purge"
      body: "*"
    };
  };
}
